# smart-table

./: .env-test  Cargo.toml  readme.md  test.rest
data/: app.db
src/: funcs.rs  main.rs
src/models/: database_models.rs  domain_models.rs  mod.rs  types.rs
