[package]
name = "smart-table"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenv = "0.15.0"
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = { version = "0.9,0", features = [
    "runtime-tokio",
    "sqlite",
    "macros"
] }
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
