[package]
name = "smart-table"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenv = "0.15.0"
rand = "0.10.2"
serde = "1.0.228"
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9,0", features = [
    "runtime-tokio",
    "sqlite",
    "macros"
] }
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
