[package]
name = "smart-table"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
cargo-watch = "8.5.3"
chrono = "0.4.45"
datetime = "0.5.2"
dotenv = "0.15.0"
fstrings = "0.2.3"
hex = "0.4.3"
rand = "0.10.2"
serde = "1.0.228"
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9,0", features = [
    "runtime-tokio",
    "sqlite",
    "macros"
] }
timespan = { version = "^0", features = ["with-serde"] }
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
uuid = "1.24.0"
